fixed wrong height on navbar for some screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,7 +86,7 @@
 
 @media only screen and (max-width: 800px) {
   nav {
-    height: 120px;
+    height: 100px;
     position: relative;
     text-align: center;
   }
